--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,13 @@
-pluginManagement {
-    repositories {
-        maven {
+pluginManagement
+{
+    repositories
+    {
+        maven
+        {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        mavenCentral()
         gradlePluginPortal()
     }
 }
